# Beacon

./: .dockerignore  .env.example  .gitignore  404.html  API.md  DATA_MODEL.md  DECISIONS.md  DEPLOY.md  DESIGN.md  PROJECT_CONTEXT.MD  README.md  WORKFLOWS.md  alembic.ini  codecov.yml  coverage.json  docker-compose.override.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  render.yaml  reports.json  requirements.txt  ruff.toml
about/: index.html
agent/: __init__.py  api_client.py  cli.py  config.py  detection.py  heartbeat.py  pyproject.toml  storage.py
agent/connectors/: __init__.py  postgres.py
agent/profiling/: __init__.py  null_check.py  runner.py  schema.py  volume.py
agent/tests/: __init__.py  test_api_client.py  test_cli.py  test_config.py  test_detection.py  test_heartbeat.py  test_storage.py
agent/tests/connectors/: __init__.py  test_postgres.py
agent/tests/profiling/: __init__.py  conftest.py  test_null_check.py  test_runner.py  test_schema.py  test_volume.py
alembic/: env.py
app/: main.py
architecture/: index.html
contributing/: index.html
development/: index.html
devops/: index.html
docs/: about.md  architecture.md  contributing.md  development.md  devops.md  features.md  index.md  releases.md
features/: index.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
hub/: app.js  index.html  reports.json  style.css
releases/: index.html
scripts/: entrypoint.sh  generate_agent_token.py  generate_docs.py  seed.py
stylesheets/: extra.css
(+294 files in other folders)
