[project]
name = "beacon-agent"
version = "0.1.0"
description = "Beacon Local Agent — profiling and anomaly detection on client infrastructure"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27,<1.0",
    "click>=8.1,<9.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "cryptography>=41.0,<49.0",
]

[project.scripts]
beacon-agent = "agent.cli:main"
